--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,7 +6,13 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto">
-          <%= link_to 'Home', tasks_path, class: "nav-link active" %>
+            <% if current_user %>
+                <%= link_to 'Task', tasks_path, class: "nav-link" %>
+                <%= link_to 'Log out', destroy_user_session_path, method: :delete, class: "nav-link" %>
+            <% else %>
+                <%= link_to 'Sign up', new_user_registration_path, class: "nav-link" %>
+                <%= link_to 'Sign in', new_user_session_path, class: "nav-link" %>
+            <% end %>
         </div>
     </div>
     </div>
