--- a/app/views/tasks/_table_record.html.erb
+++ b/app/views/tasks/_table_record.html.erb
@@ -7,24 +7,24 @@
         <th scope="col">Action</th>
         </tr>
     </thead>
-    <tbody class="text-center">
-        <% if @tasks.count > 0 %>
-            <% @tasks.each do |task| %>
-                <tr>
-                    <td><%= task.name %></td>
-                    <td><%= task.description %></td>
-                    <td><%= task.due_date %></td>
-                    <td>
-                        <%= link_to "Edit", edit_task_path(id: task.id), class:"btn btn-sm btn-secondary" %>
-                        <%= link_to "Show", task_path(id: task.id), class:"btn btn-sm btn-success" %>
-                        <%= link_to "Delete", task_path(id: task.id),data: {confirm: 'are you sure'}, method: :delete, class:"btn btn-sm btn-danger"%>
-                    </td>
-                </tr>
-            <% end %> 
-        <% else %>
+   <tbody class="text-center">
+    <% if @tasks.present? %>
+        <% @tasks.each do |task| %>
             <tr>
-                <td colspan="4" class ="text-muted">No tasks found</td>
+                <td><%= task.name %></td>
+                <td><%= task.description %></td>
+                <td><%= task.due_date %></td>
+                <td>
+                    <%= link_to "Edit", edit_task_path(id: task.id), class:"btn btn-sm btn-secondary" %>
+                    <%= link_to "Show", task_path(id: task.id), class:"btn btn-sm btn-success" %>
+                    <%= link_to "Delete", task_path(id: task.id),data: {confirm: 'are you sure'}, method: :delete, class:"btn btn-sm btn-danger"%>
+                </td>
             </tr>
-        <% end %>
-    </tbody>
+        <% end %> 
+    <% else %>
+        <tr>
+            <td colspan="4" class ="text-muted">No tasks found</td>
+        </tr>
+    <% end %>
+</tbody>
 </table>
