--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-12 d-flex justify-content-between align-items-center">
         <h3>Task List</h3>
-        <%= link_to "Add Task", new_task_path, class:"btn btn-sm btn-primary" %>
+       <%= link_to "Add Task", new_task_path(id: @user), class: "btn btn-sm btn-primary" %>
     </div>
     <div class="col-12">
        <%= render partial:'table_record', locals: {tasks: @tasks}%>
