created a user controller to customize the functions of authentication

--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -5,7 +5,8 @@
     <div class="card-body">
       <%= form_with model: @task, url: task_path(@task.id), html: { method: :put }, local: true do |f| %>
             <%= render partial:'form', locals: {f: f} %>
-            <%= f.submit "Create task", class: "btn btn-primary"%>
-        <% end %>
+            <%= f.submit "Update task", class: "btn btn-primary"%>
+      <% end %>
     </div>
 </div>
+
